--- a/index.html
+++ b/index.html
@@ -5,9 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Appcomodos</title>
+
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body> 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <div class="container"> 
+        <div class="formTitle">
+            <h1>Seja bem vindo!</h1>
+
+            <p>
+                Site que calcula a quantidade certa de tinta para o seu cômodo.
+            </p>
+        </div>
+        <form method="post" class="formApp">
+            <input type="number" value="0" name="altura" id="altura">
+            <input type="number" value="0" name="largura" id="largura">
+            <input type="number" value="0" name="portas" id="portas">
+            <input type="number" value="0" name="janelas" id="janelas">
+        </form>
+    </div>
     
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+     
+    <script src="./scripts.js"></script>
 </body>
 </html>
